--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,5 @@ sentry-sdk==1.39.1
 django-filter==23.5
 fhir.resources==7.1.0
 Pillow==10.2.0
-python-hl7==0.4.8
+hl7apy==1.3.4  # Alternative to python-hl7
 pydicom==2.4.4
