--- a/.env
+++ b/.env
@@ -1,15 +1,25 @@
-DEBUG=True
+DEBUG=False
 DJANGO_SECRET_KEY=your-secret-key-here
-ALLOWED_HOSTS=localhost,127.0.0.1
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+ALLOWED_HOSTS=*.amazonaws.com,your-domain.com
 
-DB_NAME=ehs_db
-DB_USER=postgres
-DB_PASSWORD=your-db-password
-DB_HOST=localhost
-DB_PORT=5432
+# AWS Credentials
+AWS_ACCESS_KEY_ID=your-access-key
+AWS_SECRET_ACCESS_KEY=your-secret-key
+AWS_STORAGE_BUCKET_NAME=your-bucket-name
+AWS_S3_REGION_NAME=ap-south-1
 
-CELERY_BROKER_URL=redis://localhost:6379/0
-CELERY_RESULT_BACKEND=redis://localhost:6379/0
+# RDS Configuration
+RDS_DB_NAME=ehs_db
+RDS_USERNAME=ehs_user
+RDS_PASSWORD=your-db-password
+RDS_HOSTNAME=your-rds-endpoint.region.rds.amazonaws.com
+RDS_PORT=5432
 
+# ElastiCache Configuration
+ELASTICACHE_URL=redis://your-elasticache-endpoint.region.cache.amazonaws.com:6379/0
+
+# SQS Configuration
+SQS_URL=https://sqs.region.amazonaws.com/your-account-id/your-queue-name
+
+# Sentry Configuration
 SENTRY_DSN=your-sentry-dsn
