Adding urls and serializers where they are missing, small changes to make the skeleton code running

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DEBUG=False
 DJANGO_SECRET_KEY=your-secret-key-here
-ALLOWED_HOSTS=*.amazonaws.com,your-domain.com
+ALLOWED_HOSTS=*.amazonaws.com,your-domain.com,localhost,127.0.0.1
 
 # AWS Credentials
 AWS_ACCESS_KEY_ID=your-access-key
@@ -23,3 +23,6 @@ SQS_URL=https://sqs.region.amazonaws.com/your-account-id/your-queue-name
 
 # Sentry Configuration
 SENTRY_DSN=your-sentry-dsn
+
+# JWT Settings
+JWT_SIGNING_KEY=mawct653n_gp^u3gu2@tura&0^0*tnvr^97b&&9@(l$wie_kr#
