--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ sentry-sdk==1.39.1
 django-filter==23.5
 fhir.resources==7.1.0
 Pillow==10.2.0
+hl7==0.4.2
 hl7apy==1.3.4
 pydicom==2.4.4
 gunicorn==21.2.0
+django-health-check
