Adding custom token management, user CRUD, ability to use any RDS, and added some patterns to ignore python compiled files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,51 @@
-version: '3.8'
+# version: '3.8'
+
+# services:
+#   web:
+#     build: .
+#     command: python manage.py runserver 0.0.0.0:8000
+#     volumes:
+#       - .:/app
+#     ports:
+#       - "8000:8000"
+#     depends_on:
+#       db:
+#         condition: service_started
+#       redis:
+#         condition: service_started
+#     env_file:
+#       - .env
+
+#   db:
+#     image: postgres:13
+#     volumes:
+#       - postgres_data:/var/lib/postgresql/data
+#     environment:
+#       - DJANGO_SETTINGS_MODULE=ehs_backend.settings
+#       - DB_HOST=db
+#       - DB_NAME=ehs_db
+#       - DB_USER=admin
+#       - DB_PASSWORD=admin
+#       - DB_PORT=5432
+
+#   redis:
+#     image: redis:6
+#     ports:
+#       - "6379:6379"
+
+#   celery:
+#     build: .
+#     command: celery -A ehs_backend worker -l INFO
+#     volumes:
+#       - .:/app
+#     depends_on:
+#       - web
+#       - redis
+#     env_file:
+#       - .env
+
+# volumes:
+#   postgres_data:
 
 services:
   web:
@@ -10,23 +57,34 @@ services:
       - "8000:8000"
     depends_on:
       db:
-        condition: service_started
+        condition: service_healthy
       redis:
         condition: service_started
-    env_file:
-      - .env
+    environment:
+      - DEBUG=True
+      - DJANGO_SECRET_KEY=your-secret-key-here
+      - ALLOWED_HOSTS=localhost,127.0.0.1
+      - DB_NAME=ehs_db
+      - DB_USER=ehs_user
+      - DB_PASSWORD=ehs_password
+      - DB_HOST=db
+      - DB_PORT=5432
 
   db:
     image: postgres:13
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      - DJANGO_SETTINGS_MODULE=ehs_backend.settings
-      - DB_HOST=db
-      - DB_NAME=ehs_db
-      - DB_USER=admin
-      - DB_PASSWORD=admin
-      - DB_PORT=5432
+      - POSTGRES_DB=ehs_db
+      - POSTGRES_USER=ehs_user
+      - POSTGRES_PASSWORD=ehs_password
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ehs_user"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   redis:
     image: redis:6
@@ -41,8 +99,14 @@ services:
     depends_on:
       - web
       - redis
-    env_file:
-      - .env
+    environment:
+      - DEBUG=True
+      - DJANGO_SECRET_KEY=your-secret-key-here
+      - DB_NAME=ehs_db
+      - DB_USER=ehs_user
+      - DB_PASSWORD=ehs_password
+      - DB_HOST=db
+      - DB_PORT=5432
 
 volumes:
   postgres_data:
